# libdatachannel-rtp

./: CMakeLists.txt  CMakeUserPresets.json  main.html  vcpkg-configuration.json  vcpkg.json
include/common/: idGen.hpp
include/signalConnection/: wsDataHandler.hpp
src/receiver/: receiver.cpp
src/sender/: sender.cpp
